--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>uk.co.uwcs.mulletron.interrupter</groupId>
 	<artifactId>interrupter</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.1-r6</version>
 	<packaging>jar</packaging>
 
 	<name>interrupter</name>
